<resources>
    <string name="app_name">Modern Todo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_button">floating button</string>
    <string name="no_data">No data</string>
    <string name="the_title">The title</string>
    <string name="the_description">The description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string-array name="priorities">
        <item>Low Priority</item>
        <item>Medium Priority</item>
        <item>High Priority</item>
    </string-array>
</resources>