<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/search"
        android:id="@+id/menu_list_search"
        android:icon="@drawable/ic_search"
        android:tint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <group android:checkableBehavior="single">
        <item android:title="@string/sort_by">
            <menu>
                <item
                    android:title="@string/priority_low"
                    android:id="@+id/sort_low" />
                <item
                    android:title="@string/priority_high"
                    android:id="@+id/sort_high" />
            </menu>
        </item>
    </group>
    <item
        android:title="@string/delete_all"
        android:id="@+id/list_deleteAll_menu"
        app:showAsAction="never" />
</menu>